# circuit-sim-mcp

./: .gitignore  README.md  check_claude_env.py  debug_pyspice.py  pyproject.toml  quick_test.py  requirements.txt  run_tests.sh  setup.py  test_claude_desktop.py  test_ngspice.py
circuit_sim_mcp/: __init__.py  __main__.py  circuit.py  circuit_analyzer.py  datasheet_components.py  server.py  server_basic.py  simulator.py
examples/: __init__.py  complex_amplifier_with_prompts.py  datasheet_opamp_amplifier.py  simple_voltage_divider.py
tests/: __init__.py  test_basic_circuit.py  test_circuit.py  test_circuit_analyzer.py  test_comprehensive.py
