[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "circuit-sim-mcp"
version = "0.1.0"
description = "MCP server for PySpice circuit simulation"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "mcp>=1.0.0",
    "pyspice>=1.4.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
]
plotting = [
    "numpy>=1.21.0",
    "matplotlib>=3.5.0",
]

[project.scripts]
circuit-sim-mcp = "circuit_sim_mcp.__main__:main"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 